--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 black==22.1.0
 click==8.0.4
 Flask==2.0.3
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.2
 itsdangerous==2.1.1
 Jinja2==3.0.3
 MarkupSafe==2.1.1
 mypy-extensions==0.4.3
 pathspec==0.9.0
 platformdirs==2.5.1
+SQLAlchemy==1.4.32
 tomli==2.0.1
 Werkzeug==2.0.3
